# sdypy-view

./: pyproject.toml
docs/source/: code.rst  conf.py  index.rst
sdypy/view/: __init__.py  pyvista_3D.py
tests/: test_view.py
