[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "sdypy-view"
version = "0.2.0"
authors = [
    { name = "Klemen Zaletelj, Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si" },
]
maintainers = [
    { name = "Klemen Zaletelj, Janko Slavič et al.", email = "klemen.zaletelj@fs.uni-lj.si" },
]
license = { text = "MIT" }
description = "Visualization of SDyPy models and results"
readme = "README.rst"
keywords = [
    "Visualization",
    "2D",
    "3D",
    "FEM",
]
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.23.4",
    "numpy>=1.14.3",
    "scipy>=1.1.0",
    "pylump",
    "pyvista",
    "pyvistaqt",
    "meshio",
    "imageio",
    "pyperclip",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sdypy/sdypy-view"
Documentation = "https://sdypy-view.readthedocs.io/en/latest/index.html"
Source = "https://github.com/sdypy/sdypy-view"

[project.optional-dependencies]
qt = [
    "pyqt6",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-copybutton>=0.5.2",
]
dev = [
    "sdypy-view[docs]",
    "twine",
    "wheel",
    "pytest",
    "build",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["sdypy"]

[tool.hatch.build.targets.sdist]
include = [
    "sdypy/",
    "tests/",
    "docs/",
    "README.rst",
    "License",
    "pyproject.toml",
    "readthedocs.yaml",
    "CONTRIBUTING.rst",
]
exclude = [
    "docs/_build/",
    "docs/build/",
]
